fix tags overflow

--- a/bda.css
+++ b/bda.css
@@ -463,6 +463,9 @@ a {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  width: 100%;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 .favline div{
